updated score svg

--- a/client/app/scoreBoard/scoreBoard.html
+++ b/client/app/scoreBoard/scoreBoard.html
@@ -5,13 +5,10 @@
 
 <svg
 	 width="1920px" height="1080px"  xml:space="preserve">
-	<path fill="none"  id="energyPath" stroke="none" d="M246.333,457.668c0,0,54.667-154,155.333-241.333
-	s238-137.333,238-137.333"/>
-	<path fill="none" id="economyPath" stroke="none" d="M1277.863,78.908c0,0,137.333,50,238,137.333
-	c100.666,87.333,155.333,241.333,155.333,241.33"/>
-	<path fill="none" id="environmentPath" stroke="none" d="M655,73.669c0,0,138.67-47.126,305-47.126
-	c176.337,0,301.667,47.126,301.667,47.126"/>
-
+<path id="energyPath" fill="none" d="M264.391,457.668c0,0,53.362-154,151.626-241.333S648.338,79.002,648.338,79.002"/>
+	<path id="economyPath" fill="none" d="M1271.307,78.908c0,0,134.056,50,232.32,137.333s151.627,241.333,151.627,241.33"/>
+	<path id="environmentPath" fill="none" d="M663.306,73.669c0,0,135.361-47.126,297.722-47.126
+		c172.129,0,294.469,47.126,294.469,47.126"/>
 
   <g>
     <text text-anchor="start" font-size="24" >
