--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -5,9 +5,9 @@
     <div class="topPlane"></div>
     <div class="bottomPlane">
       <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
+
       <div ng-show="game.phase == 'choice'">
         <div ng-show = "player.currentPlayer">
-
           <h4 class = "tab-title text-center">Choose an Action</h4>
           <div class="ggc-btn-wrap">
             <div class="col-md-6" ng-click="dealer.playerChoice(name,$index)" ng-repeat="choice in player.hand.choices track by $index">
@@ -16,7 +16,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
 
@@ -27,24 +26,20 @@
           <div ng-bind-html="t"></div>
           <br />
         </div>
-
       </div>
-
 
       <div ng-show="game.phase == 'vote'" class="vote-buttons">
         <div class="ggc-btn-wrap" >
           <div class="col-md-6">
             <div class="ggc-btn">
-              <a ng-hide="player.hand.issue.vote == 1" class='btn-icon block {{name}}' class="btn-icon pass {{name}}" ng-class="{'selected':player.hand.issue.vote == 0}">BLOCK</a>
+              <a ng-hide="player.hand.issue.vote == 1" class="btn-icon block {{name}}" ng-class="{'selected':player.hand.issue.vote == 0}">BLOCK</a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="ggc-btn">
-              <a ng-hide="player.hand.issue.vote == 0" class='btn-icon pass {{name}}' class="btn-icon pass {{name}}" ng-class="{'selected':player.hand.issue.vote == 1}">PASS</a>
+              <a ng-hide="player.hand.issue.vote == 0" class="btn-icon pass {{name}}" ng-class="{'selected':player.hand.issue.vote == 1}">PASS</a>
             </div>
           </div>
-
-
         </div>
       </div>
 
