enter random Event state

--- a/client/app/game/event.html
+++ b/client/app/game/event.html
@@ -1,7 +1,7 @@
 <!-- >The MAIN (Center) Events Go Here<-->
 <div>
-  <video  autoplay>
-    <source ng-src="{{getVideoURL(game.main.videoFile)}}" type="video/webm"></source>
+  <video  autoplay class = "ggc-video-main" ggc-video="true">
+    <source  ng-src="{{getVideoURL(game.main.videoFile)}}" type="video/webm"></source>
   </video>
 </div>
 
