--- a/client/index.html
+++ b/client/index.html
@@ -136,6 +136,7 @@
           <script src="app/filters/filters.filter.js"></script>
           <script src="app/game/game.controller.js"></script>
           <script src="app/game/game.js"></script>
+          <script src="app/ggc-video/ggc-video.directive.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
