Created ng-Grid for card design at endpoint /edit

--- a/client/app/edit/edit.html
+++ b/client/app/edit/edit.html
@@ -2,14 +2,14 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    
+
   </div>
 </header>
 
-<div class="container">
-  <div class="row">
+<div>
+  <div>
 	<card-list></card-list>
-    
+
   </div>
 </div>
 
