--- a/client/app/cardList/cardList.html
+++ b/client/app/cardList/cardList.html
@@ -1,14 +1,6 @@
+<h1 class="page-header">Cards:</h1>
 
-  <h1 class="page-header">Cards:</h1>
-	<!-- Example of ng-repeat -->
-	<div class = "col-md-6 well" ng-repeat="card in cards">	
-  		<ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" >
-			<a href="{{getEditURL(card._id)}}"><h1>{{card.topic}}</h1></a>
-    		<li><a href="#" tooltip="{{card.team}}">{{card.team}}</a></li>
-			<!-- use ng-bind-html to sanitize html -->
-			<li><a href="#" tooltip="{{card.mainText}}" ng-bind-html=card.mainText></a></li>
-  		</ul>
-		<div class="icon" ng-bind-html=card.icon ></div>
-		<!-- call a method on controller to pretty-print json as text-->
-		<div><pre>{{printObject(card.effects)}}</pre></div>
-	</div>
+<!-- Example of ng-repeat -->
+<div ng-repeat="card in cards">
+  <div class="gridStyle" ng-grid="gridOptions"></div>
+</div>
