--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -2,12 +2,19 @@
 
 
     <div style="z-index:20;" class="scenario-card text-left" ng-repeat = "mainCard in game.main track by $index" ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen}">
+      <div class = "row">
+        <div class ="col-md-12">
+          <h3 ng-bind-html="mainCard.action"></h3>
+        </div>
+      </div>
       <div class="row main-row">
+
         <!--div class="scenario-icon col-md-3" ng-bind-html="trust(mainCard.icon.icon)"></div-->
-        <div class="col-md-3 scenario-icon" ggc-icon  icon-id="{{mainCard.icon._id}}"></div>
-        <div class="col-md-8">
-         <h4 ng-bind-html="mainCard.action"></h4>
-         <div style="font-size:1.25em;" ng-bind-html="mainCard.mainText"></div>
+
+        <div class="col-md-3 scenario-icon" ggc-icon icon-class="{{game.currentPlayer}}"  icon-id="{{mainCard.icon._id}}"></div>
+        <div class="col-md-9">
+
+         <div ng-bind-html="mainCard.mainText"></div>
         </div>
       </div>
     </div>
