added "Actions" title to new "ui-main" div

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -6,7 +6,7 @@
      <div ui-view="plane"></div>
     <div ui-view="scrim"></div>
  <!--TODO(Ryan):  Tell Ray why?-->
-        <div id="box-wrap-inner"
+        <div id = "ui-main"
              ui-view="main"></div>
 
 
