--- a/client/app/game/event.html
+++ b/client/app/game/event.html
@@ -1,5 +1,5 @@
 <!-- >The MAIN (Center) Events Go Here<-->
-<div>
+<div id = "box-wrap-inner">
   <video  autoplay class = "ggc-video-main" ggc-video="true">
     <source  ng-src="{{getVideoURL(game.main.videoFile)}}" type="video/webm"></source>
   </video>
