--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row main-row">
 
-      <!--{{game.currentPlayer}} div class="scenario-icon col-md-3" ng-bind-html="trust(mainCard.icon.icon)"></div-->
+      <!-- div class="scenario-icon col-md-3" ng-bind-html="trust(mainCard.icon.icon)"></div-->
 
       <div class="col-md-3 scenario-icon" ggc-icon icon-class="{{mainCard.team}}"
            icon-id="{{mainCard.icon._id}}"></div>
