cleaning up card title animation

--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -16,7 +16,7 @@
        ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen}">
     <div class="row">
       <div class="col-md-12">
-        <h3 class="bg-{{mainCard.team}} mainBar" ng-bind-html="mainCard.action"></h3>
+        <h3 class=" mainBar {{mainCard.team}}" ng-bind-html="mainCard.action"></h3>
 
       </div>
     </div>
