--- a/client/app/game/scrim.html
+++ b/client/app/game/scrim.html
@@ -8,11 +8,11 @@
   <div id="mapB" >BBB</div>
   <div id="landmarks">
     <!--img  id="highways" src="svg/highways.svg"  /-->
-    <div id="corpuschristi" class="city" style="left:21.75%; top:31.75%;">&nbsp;Corpus Christi</div>
-    <div id="houston" class="city" style="left:32%; top:24%;">&nbsp;Houston</div>
-    <div id="neworleans" class="city" style="left:50%; top:23.5%;">&nbsp;New Orleans</div>
-    <div id="mobile" class="city" style="left: 56.75%; top: 22%;">&nbsp;Mobile</div>
-    <div id="tampa" class="city" style="left:72.5%; top:39%;">Tampa&nbsp;</div>
+    <div id="corpuschristi" class="city" style="left:21.75%; top:31.75%;">Corpus Christi</div>
+    <div id="houston" class="city" style="left:32%; top:24%;">Houston</div>
+    <div id="neworleans" class="city" style="left:50%; top:23.5%;">New Orleans</div>
+    <div id="mobile" class="city" style="left: 56.75%; top: 22%;">Mobile</div>
+    <div id="tampa" class="city leftlabel" style="left:72.5%; top:39%;">Tampa</div>
   </div>
   <div id="borderscrim"></div>
 
