--- a/client/index.html
+++ b/client/index.html
@@ -118,6 +118,7 @@
       <script src="bower_components/d3/d3.js"></script>
       <script src="bower_components/threejs/build/three.js"></script>
       <script src="bower_components/angular-audio/app/angular.audio.js"></script>
+      <script src="bower_components/angular-ui-router.stateHelper/statehelper.js"></script>
       <!-- endbower -->
     <script src="lib/hexbin.js"></script>
     <!-- endbuild -->
