--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -4,12 +4,13 @@
   <h1 style = "game.phase == 'choice'" class = "title">
     <span ng-show="game.phase == 'choice'" class="titleText">Actions</span>
     <span ng-show="game.phase == 'vote'" class="titleText">Vote</span>
+    <span ng-show="game.phase == 'scoring'" class="titleText">Score</span>
   </h1>
 </div>
 
 <div id = "box-wrap-inner">
   <div style="z-index:20;" class="scenario-card text-left" ng-repeat="mainCard in game.main track by $index"
-       ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen}">
+       ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen}" ng-hide="game.phase == 'scoring'">
     <div class="row">
       <div class="col-md-12">
         <h3 class="bg-{{mainCard.team}} mainBar" ng-bind-html="mainCard.action"></h3>
