--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -1,19 +1,15 @@
 <!-- >The MAIN (Center) Cards Go Here<-->
 
-<<<<<<< HEAD
-<div class="row text-center">
-  <h1 style = "game.phase == 'choice'" class = "title">
-    <span ng-show="game.phase == 'choice'" class="titleText">Actions</span>
-    <span ng-show="game.phase == 'vote'" class="titleText">Vote</span>
-    <span ng-show="game.phase == 'scoring'" class="titleText">Score</span>
-=======
+
 <div class="row relative text-center main-title" >
   <h1  class = "title" ng-show="game.phase == 'choice'">
     Actions
   </h1>
   <h1  class = "title" ng-show="game.phase == 'vote'">
     Vote
->>>>>>> origin/master
+  </h1>
+  <h1  class = "title" ng-show="game.phase == 'scoring'">
+    Score
   </h1>
 </div>
 
