--- a/client/app/sandbox/grid.html
+++ b/client/app/sandbox/grid.html
@@ -1,5 +1,5 @@
 this is the grid
-<div ng-click="clicked($event)" class = " gridContainer relative">
+<div  class = " gridContainer relative">
   <div " ggc-grid='true' >
 
   </div>
