--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,16 +1,14 @@
+<div id="main">
+  <div ui-view="background"></div>
 
 
+  <!--TODO(Ryan):  Tell Ray why?-->
+  <div id="ui-main" ui-view="main"></div>
+  <div ui-view="plane"></div>
+  <div ui-view="scrim"></div>
 
 
-   <div id="main">
-     <div ui-view="plane"></div>
-    <div ui-view="scrim"></div>
- <!--TODO(Ryan):  Tell Ray why?-->
-        <div id = "ui-main"
-             ui-view="main"></div>
-
-
-  </div>
+</div>
 
 
 
