GGC-25 Add SVG filters to grid icons

--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -24,7 +24,7 @@
 
       <!-- div class="scenario-icon col-md-3" ng-bind-html="trust(mainCard.icon.icon)"></div-->
 
-      <div class="col-md-3 scenario-icon" ggc-icon icon-class="{{mainCard.team}}"
+      <div class="col-md-3 scenario-icon" ggc-icon fill="true"
            icon-id="{{mainCard.icon._id}}"></div>
       <div class="col-md-9">
       <!--TODO remove whitespace-->
