--- a/client/app/sandbox/sandbox.html
+++ b/client/app/sandbox/sandbox.html
@@ -1,2 +1,7 @@
+
+<ggc-svg-filters></ggc-svg-filters>
 <div ng-include="'components/navbar/navbar.html'"  ></div>
-<ui-view></ui-view>
+<div style="background-color: black">
+  <ui-view></ui-view>
+
+</div>
