--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -12,7 +12,7 @@
           <div class="ggc-btn-wrap">
             <div class="col-md-6" ng-click="dealer.playerChoice(name,$index)" ng-repeat="choice in player.hand.choices track by $index">
               <div class = "ggc-btn">
-                <div ggc-icon  icon-class="{{name}}" frame="true" icon-id="{{choice.icon._id}}"></div>
+                <div ggc-icon  fill="true" frame="true" icon-id="{{choice.icon._id}}"></div>
               </div>
             </div>
           </div>
