--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
       <link rel="stylesheet" href="app/game/game.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
+      <link rel="stylesheet" href="app/ggcSvgFilters/ggcSvgFilters.css">
       <link rel="stylesheet" href="app/ggcThree/ggcThree.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
@@ -52,6 +53,8 @@
     <!-- endbuild -->
   </head>
   <body ng-app="ggcApp"  ng-keyup="globalShortcuts($event)" ng-controller="AppCtrl">
+
+
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -141,6 +144,7 @@
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
+          <script src="app/ggcSvgFilters/ggcSvgFilters.directive.js"></script>
           <script src="app/ggcThree/ggcThree.directive.js"></script>
           <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
