--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
       <link rel="stylesheet" href="app/game/game.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
+      <link rel="stylesheet" href="app/ggcSvgFilters/ggcSvgFilters.css">
       <link rel="stylesheet" href="app/ggcThree/ggcThree.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/playerPanel/playerPanel.css">
@@ -141,6 +142,7 @@
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
+          <script src="app/ggcSvgFilters/ggcSvgFilters.directive.js"></script>
           <script src="app/ggcThree/ggcThree.directive.js"></script>
           <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
           <script src="app/ggcUtil/ggcUtil.service.js"></script>
