GGC-26 popcorn.js for prologue

--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
       <link rel="stylesheet" href="app/game/game.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
+      <link rel="stylesheet" href="app/ggcPrologueVid/ggcPrologueVid.css">
       <link rel="stylesheet" href="app/ggcSvgFilters/ggcSvgFilters.css">
       <link rel="stylesheet" href="app/ggcThree/ggcThree.css">
       <link rel="stylesheet" href="app/main/main.css">
@@ -121,8 +122,10 @@
       <script src="bower_components/angular-audio/app/angular.audio.js"></script>
       <script src="bower_components/angular-ui-router.stateHelper/statehelper.js"></script>
       <!-- endbower -->
-    <script src="lib/hexbin.js"></script>
+
     <!-- endbuild -->
+    <script src="lib/hexbin.js"></script>
+    <script src="lib/popcorn-custom.js"></script>
 
     <script src="//cdn.ckeditor.com/4.4.4/standard/ckeditor.js"></script>
 
@@ -142,6 +145,7 @@
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
+          <script src="app/ggcPrologueVid/ggcPrologueVid.directive.js"></script>
           <script src="app/ggcSvgFilters/ggcSvgFilters.directive.js"></script>
           <script src="app/ggcThree/ggcThree.directive.js"></script>
           <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
