--- a/client/app/game/prologue.html
+++ b/client/app/game/prologue.html
@@ -2,5 +2,8 @@
 <div class="row">
   <div id="box-wrap-inner">
     <h1>This is the prologue, brother.</h1>
+    <video ggc-prologue-vid >
+      <src =
+    </video>
   </div>
 </div>
