GGC-26 popcorn.js for prologue

--- a/client/app/game/prologue.html
+++ b/client/app/game/prologue.html
@@ -1,9 +1,9 @@
 <!-- >The MAIN (Center) Cards Go Here<-->
 <div class="row">
   <div id="box-wrap-inner">
-    <h1>This is the prologue, brother.</h1>
+
     <video ggc-prologue-vid >
-      <src =
+      <source  ng-src="{{getVideoURL('heat.webm')}}" type="video/webm"></source>
     </video>
-  </div>
+
 </div>
