--- a/client/index.html
+++ b/client/index.html
@@ -40,9 +40,7 @@
       <link rel="stylesheet" href="app/game/game.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
-
       <link rel="stylesheet" href="app/ggcPrologueVid/ggcPrologueVid.css">
-
       <link rel="stylesheet" href="app/ggcSvgFilters/ggcSvgFilters.css">
       <link rel="stylesheet" href="app/ggcThree/ggcThree.css">
       <link rel="stylesheet" href="app/main/main.css">
@@ -149,9 +147,8 @@
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
-
+          <script src="app/ggcPrologueOverlord/ggcPrologueOverlord.service.js"></script>
           <script src="app/ggcPrologueVid/ggcPrologueVid.directive.js"></script>
-
           <script src="app/ggcSvgFilters/ggcSvgFilters.directive.js"></script>
           <script src="app/ggcThree/ggcThree.directive.js"></script>
           <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
