--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -44,5 +44,24 @@
         </div>
       </div>
 
+      <div ng-show="game.phase == 'scoring'" class="vote-buttons">
+        <div  ng-show = "player.hand.issue.passed">
+          <h3 class = "tab-title text-center">Action Passed </h3>
+          <h1 class="text-center score {{name}}" ng-bind-html="player.hand.issue.scoreHTML"></h1>
+          <div class="tab-body">
+            <span ng-show="(+player.hand.issue.score > 0)">Congratulations, your sector improved.</span>
+            <span ng-show="(+player.hand.issue.score == 0)">Change not, your sector did.</span>
+            <span
+              ng-show="(+player.hand.issue.score < 0)">Your sector declined, thanks for taking one for the team.</span>
+          </div>
+        </div>
+        <div ng-hide = "player.hand.issue.passed">
+          <h3 class = "tab-title text-center">Action Blocked</h3>
+        </div>
+
+
+
+      </div>
+
   </div>
 </div>
