--- a/client/app/scoreBoard/scoreBoard.html
+++ b/client/app/scoreBoard/scoreBoard.html
@@ -1,14 +1,9 @@
-
-
 <div style="  pointer-events: none;">
 
-
-<svg
-	 width="1920px" height="1080px"  xml:space="preserve">
-<path id="environmentPath" fill="none" d="M264.391,457.668c0,0,53.362-154,151.626-241.333S648.338,79.002,648.338,79.002"/>
-	<path id="energyPath" fill="none" d="M1271.307,78.908c0,0,134.056,50,232.32,137.333s151.627,241.333,151.627,241.33"/>
-	<path id="economyPath" fill="none" d="M663.306,73.669c0,0,135.361-47.126,297.722-47.126
-		c172.129,0,294.469,47.126,294.469,47.126"/>
+  <svg width="1920px" height="1080px"  xml:space="preserve">
+    <path id="environmentPath" fill="none" d="M264.391,457.668c0,0,53.362-154,151.626-241.333S648.338,79.002,648.338,79.002"/>
+	  <path id="energyPath" fill="none" d="M1271.307,78.908c0,0,134.056,50,232.32,137.333s151.627,241.333,151.627,241.33"/>
+	  <path id="economyPath" fill="none" d="M663.306,73.669c0,0,135.361-47.126,297.722-47.126 c172.129,0,294.469,47.126,294.469,47.126"/>
 
   <g>
     <text text-anchor="start" font-size="24" >
