--- a/client/app/ggcSvgFilters/ggcSvgFilters.html
+++ b/client/app/ggcSvgFilters/ggcSvgFilters.html
@@ -1,6 +1,10 @@
 <svg height="0">
 
     <defs>
+      <clipPath id="cliphex" clipPathUnits="objectBoundingBox">
+
+        <path d= "M0,0.5L0.08,0L0.92,0L1,0.5L0.92,1L0.08,1L0,0.5" />
+      </clipPath>
       <filter id="glow" x="-30%" y="-30%" width="160%" height="160%">
         <feGaussianBlur stdDeviation="10 10" result="glow"/>
         <feMerge>
