Prologue Video Animations first pass

--- a/client/app/game/prologue.html
+++ b/client/app/game/prologue.html
@@ -2,8 +2,8 @@
 <div class="row">
   <div id="box-wrap-inner">
 
-    <video ggc-prologue-vid >
-      <source  ng-src="{{getVideoURL('heat.webm')}}" type="video/webm"></source>
+    <video ggc-prologue-vid class = "ggc-video-prologue">
+      <source  ng-src="{{getVideoURL('prologue.webm')}}" type="video/webm"></source>
     </video>
 
 </div>
