--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -1,6 +1,6 @@
 
 
-<div class="panelOuter {{name}}" ng-class="{'retract':player.docked}">
+<div class="panelOuter {{name}} fullRetract" ng-class="{'retract':player.docked}">
   <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.currentPlayer == false]-->
     <div class="topPlane"></div>
     <div class="bottomPlane">
@@ -28,6 +28,7 @@
           <br />
         </div>
       </div>
+
 
       <div ng-show="game.phase == 'vote'" class="vote-buttons">
         <div class="ggc-btn-wrap" >
