--- a/client/app/sandbox/grid.html
+++ b/client/app/sandbox/grid.html
@@ -1,6 +1,6 @@
 this is the grid
 <div  class = " gridContainer relative">
-  <div " ggc-grid='true' >
+  <div  ggc-grid='true'  >
 
   </div>
   <ggc-icon-grid ></ggc-icon-grid>
