Revert dd94d00..5e580bc
This rolls back to commit dd94d00f4fcd69e20f715911b376995b305935c8.

--- a/client/index.html
+++ b/client/index.html
@@ -128,8 +128,8 @@
     <!-- endbuild -->
     <script src="lib/hexbin.js"></script>
     <script src="lib/popcorn-custom.js"></script>
-    <script src="//cdn.ckeditor.com/4.4.4/standard/ckeditor.js"></script>
-    <!--<script src="lib/ckeditor.js"></script>-->
+
+    <script src="lib/ckeditor.js"></script>
 
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
