GGC-34 Add main panel area to prologue

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,13 +1,14 @@
-<ggc-svg-filters></ggc-svg-filters>
+<ggc-svg-filters class="noHeight"></ggc-svg-filters>
 
 <div id="main">
   <div ui-view="background"></div>
 
 
   <!--TODO(Ryan):  Tell Ray why?-->
-
+  <div ui-view="vid" id="ui-vid"></div>
   <div ui-view="plane"></div>
   <div id="ui-main" ui-view="main"></div>
+
   <div ui-view="scrim"></div>
 
 
