--- a/client/app/game/prologue.html
+++ b/client/app/game/prologue.html
@@ -1,8 +1,8 @@
-4454<!-- >The MAIN (Center) Cards Go Here<-->
+
 <div class="row">
   <div id="box-wrap-inner">
 
-    <video ggc-prologue-vid class = "ggc-video-prologue">
+    <video ggc-prologue-vid id="#prologue"  class = "ggc-video-prologue">
       <source  ng-src="{{getVideoURL('prologue.4.webm')}}" type="video/webm"></source>
     </video>
 
