Hiding pink buttons

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -9,7 +9,7 @@
   <div ui-view="plane"></div>
   <div id="ui-main" ui-view="main"></div>
   <div ui-view="scrim"></div>
-  <img ng-show="config.debug" class = "debugOverlay" src="../../bmp/borderandscrim_1200_buttons.png" />
+  <!--img ng-show="config.debug" class = "debugOverlay" src="../../bmp/borderandscrim_1200_buttons.png" /-->
 
 </div>
 
