fixing upstream conflicts with resize

--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -1,4 +1,4 @@
-<ggc-svg-filters class="noHeight"></ggc-svg-filters>
+<ggc-svg-filters id="svgDefs"></ggc-svg-filters>
 
 <div id="main">
   <div ui-view="background"></div>
@@ -8,9 +8,8 @@
   <div ui-view="vid" id="ui-vid"></div>
   <div ui-view="plane"></div>
   <div id="ui-main" ui-view="main"></div>
-
   <div ui-view="scrim"></div>
-
+  <!--img ng-show="config.debug" class = "debugOverlay" src="../../bmp/borderandscrim_1200_buttons.png" /-->
 
 </div>
 
