--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,5 +1,5 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
+<div class = "navPad"></div>
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Great Gulf Challenge</h1>
@@ -13,6 +13,6 @@
 
 <footer class="footer">
   <div class="container">
-     
+
   </div>
 </footer>
