--- a/client/app/game/game.html
+++ b/client/app/game/game.html
@@ -5,11 +5,12 @@
 
 
   <!--TODO(Ryan):  Tell Ray why?-->
-  <div ui-view="vid" id="ui-vid"></div>
+
   <div ui-view="plane"></div>
   <div id="ui-main" ui-view="main"></div>
+  <div ui-view="vid" id="ui-vid"></div>
   <div ui-view="scrim"></div>
-  <!--img ng-show="config.debug" class = "debugOverlay" src="../../bmp/borderandscrim_1200_buttons.png" /-->
+  <!--<img  class = "debugOverlay" src="../../bmp/borderandscrim_1200_buttons.png" />-->
 
 </div>
 
