--- a/client/app/game/main_loop.html
+++ b/client/app/game/main_loop.html
@@ -8,7 +8,7 @@
   <h1  class = "title" ng-show="game.phase == 'vote'">
     Vote
   </h1>
-  <h1  class = "title" ng-show="game.phase == 'scoring'">
+  <h1  class = "title" ng-show="game.phase == 'scoring' && dealer.prologue == false">
     Score
   </h1>
 </div>
@@ -18,33 +18,33 @@
 <div id = "box-wrap-inner">
 
   <div  class="relative scenario-card text-left" ng-repeat="mainCard in game.main track by $index"
-       ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen, dim:game.phase=='scoring'}" >
+        ng-class="{invisible: mainCard.hidden, chosen: mainCard.chosen, dim:game.phase=='scoring'}" ng-hide="dealer.prologue == true">
     <div class="scenarioWrap">
 
 
-    <!--<div class="row">-->
+      <!--<div class="row">-->
       <!--<div class="col-md-12">-->
-       <div class="mainBar {{mainCard.team}}"> <h3 class="  {{mainCard.team}}" ng-bind-html="mainCard.action"></h3></div>
+      <div class="mainBar {{mainCard.team}}"> <h3 class="  {{mainCard.team}}" ng-bind-html="mainCard.action"></h3></div>
 
       <!--</div>-->
-    <!--</div>-->
-    <div class="row main-row">
+      <!--</div>-->
+      <div class="row main-row">
 
-      <!-- div class="scenario-icon col-md-3" ng-bind-html="trust(mainCard.icon.icon)"></div-->
+        <!-- div class="scenario-icon col-md-3" ng-bind-html="trust(mainCard.icon.icon)"></div-->
 
-      <div class="col-md-3 scenario-icon" ggc-icon fill="true"
-           icon-id="{{mainCard.icon._id}}"></div>
-      <div class="col-md-9">
-      <!--TODO remove whitespace-->
-        <div ng-bind-html="mainCard.mainText"></div>
+        <div class="col-md-3 scenario-icon" ggc-icon fill="true"
+             icon-id="{{mainCard.icon._id}}"></div>
+        <div class="col-md-9">
+          <!--TODO remove whitespace-->
+          <div ng-bind-html="mainCard.mainText"></div>
+        </div>
       </div>
-    </div>
     </div>
   </div>
 
 </div>
 
-<div ng-show = "game.phase == 'scoring'" class="stamp" ng-class="{passed:game.action.passed, blocked:!game.action.passed}">
+<div ng-show="game.phase == 'scoring' && dealer.prologue == false" class="stamp" ng-class="{passed:game.action.passed, blocked:!game.action.passed}">
   <h1 class=jumbo" ng-show="game.action.passed">PASSED</h1>
   <h1 class=jumbo" ng-hide="game.action.passed">BLOCKED</h1>
 </div>
