--- a/client/app/game/prologue.html
+++ b/client/app/game/prologue.html
@@ -1,9 +1,9 @@
 
 
-  <div id="box-wrap-inner">
+<div id="box-wrap-inner">
 
-    <video ggc-prologue-vid id="#prologue"  class = "ggc-video-prologue">
-      <source  ng-src="{{getVideoURL('prologue.4.webm')}}" type="video/webm"></source>
-    </video>
+  <video ggc-prologue-vid id="#prologue"  class = "ggc-video-prologue">
+    <source  ng-src="{{getVideoURL('prologue.webm')}}" type="video/webm"></source>
+  </video>
 
 </div>
