--- a/client/index.html
+++ b/client/index.html
@@ -150,6 +150,7 @@
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
           <script src="app/ggcPrologueOverlord/ggcPrologueOverlord.service.js"></script>
           <script src="app/ggcPrologueVid/ggcPrologueVid.directive.js"></script>
+          <script src="app/ggcScore/ggcScore.directive.js"></script>
           <script src="app/ggcSvgFilters/ggcSvgFilters.directive.js"></script>
           <script src="app/ggcThree/ggcThree.directive.js"></script>
           <script src="app/ggcThreeScene/ggcThreeScene.service.js"></script>
@@ -157,6 +158,7 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/map/map.service.js"></script>
+          <script src="app/nwkiosk/nwkiosk.service.js"></script>
           <script src="app/playerPanel/playerPanel.directive.js"></script>
           <script src="app/preview/preview.controller.js"></script>
           <script src="app/preview/preview.js"></script>
