First pass at incorporating attract animation

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
       <link rel="stylesheet" href="app/cardList/cardList.css">
       <link rel="stylesheet" href="app/edit/edit.css">
       <link rel="stylesheet" href="app/game/game.css">
+      <link rel="stylesheet" href="app/ggcAttractVid/ggcAttractVid.css">
       <link rel="stylesheet" href="app/ggcIcon/ggcIcon.css">
       <link rel="stylesheet" href="app/ggcIconGrid/ggcIconGrid.css">
       <link rel="stylesheet" href="app/ggcPrologueVid/ggcPrologueVid.css">
@@ -144,6 +145,8 @@
           <script src="app/game/game.controller.js"></script>
           <script src="app/game/game.js"></script>
           <script src="app/ggc-video/ggc-video.directive.js"></script>
+          <script src="app/ggcAttractOverlord/ggcAttractOverlord.service.js"></script>
+          <script src="app/ggcAttractVid/ggcAttractVid.directive.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
