--- a/client/index.html
+++ b/client/index.html
@@ -128,7 +128,7 @@
     <!-- endbuild -->
     <script src="lib/hexbin.js"></script>
     <script src="lib/popcorn-custom.js"></script>
-    <script src="//cdn.ckeditor.com/4.4.4/standard/ckeditor.js"></script>
+    <script src="ckeditor.js"></script>
     <!--TODO() Remove CDNs-->
     <!--<script src="lib/ckeditor.js"></script>-->
 
