Index/NWIndex fixes

--- a/client/NWIndex.html
+++ b/client/NWIndex.html
@@ -1,12 +1,12 @@
 <!doctype html>
 
   <head>
-    
+
   </head>
   <body >
 
 
-          <script>location.href="http://localhost:8080";</script>
-        
+          <script>location.href="http://localhost:8080/game/play/attract";</script>
+
 </body>
 </html>
