--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,9 @@
     <div ui-view></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-
+    <script src="lib/hexbin.js"></script>
+    <script src="lib/popcorn-custom.js"></script>
+    <script src="lib/ckeditor.js"></script>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -126,9 +128,7 @@
       <!-- endbower -->
 
     <!-- endbuild -->
-    <script src="lib/hexbin.js"></script>
-    <script src="lib/popcorn-custom.js"></script>
-    <script src="ckeditor.js"></script>
+
     <!--TODO() Remove CDNs-->
     <!--<script src="lib/ckeditor.js"></script>-->
 
