Fixes to reset game, attract loop

--- a/client/NWIndex.html
+++ b/client/NWIndex.html
@@ -5,8 +5,18 @@
   </head>
   <body >
 
+  <script>
+    var gui =require('nw.gui');
 
-          <script>location.href="http://localhost:8080/game/play/attract";</script>
+    var win = gui.Window.get();
+
+    win.enterKioskMode();
+  </script>
+
+
+  <script>location.href="http://localhost:8080/game/play/attract";</script>
 
 </body>
 </html>
+
+
