--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
       <link rel="stylesheet" href="app/preview/preview.css">
       <link rel="stylesheet" href="app/sandbox/sandbox.css">
       <link rel="stylesheet" href="app/scoreBoard/scoreBoard.css">
+      <link rel="stylesheet" href="app/vars.css">
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -149,6 +150,8 @@
           <script src="app/ggc-video/ggc-video.directive.js"></script>
           <script src="app/ggcAttractOverlord/ggcAttractOverlord.service.js"></script>
           <script src="app/ggcAttractVid/ggcAttractVid.directive.js"></script>
+          <script src="app/ggcDeck/ggcDeck.service.js"></script>
+          <script src="app/ggcGame/ggcGame.service.js"></script>
           <script src="app/ggcGrid/ggcGrid.directive.js"></script>
           <script src="app/ggcIcon/ggcIcon.directive.js"></script>
           <script src="app/ggcIconGrid/ggcIconGrid.directive.js"></script>
