--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -45,12 +45,12 @@
         <div class="ggc-btn-wrap" >
           <div class="col-md-6">
             <div class="ggc-btn">
-              <a ng-hide="player.hand.issue.vote == 1" class="btn-icon block {{name}}" ng-class="{'selected':player.hand.issue.vote == 0}">BLOCK</a>
+              <a ng-hide="player.hand.issue.vote == 1" class="btn-icon block {{name}}" ng-class="{'selected':player.hand.issue.vote == 0}"> NO </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="ggc-btn">
-              <a ng-hide="player.hand.issue.vote == 0" class="btn-icon pass {{name}}" ng-class="{'selected':player.hand.issue.vote == 1}">PASS</a>
+              <a ng-hide="player.hand.issue.vote == 0" class="btn-icon pass {{name}}" ng-class="{'selected':player.hand.issue.vote == 1}">YES</a>
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
 
       <div ng-show="game.phase == 'scoring' && dealer.signIn == false" class="vote-buttons">
         <div  ng-show = "player.hand.issue.passed">
-          <h3 class = "tab-title text-center">Action Passed </h3>
+          <h3 class = "tab-title text-center">Action Passed</h3>
           <h1 class="text-center score {{name}}" ng-bind-html="player.hand.issue.scoreHTML"></h1>
           <div class="tab-body">
             <span ng-show="(+player.hand.issue.score > 0)">Your sector improved.</span>
