--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -4,14 +4,14 @@
 <div class="arrow energy"></div>
 
 <div class="panelOuter {{name}}" ng-class="{'retract':player.docked, 'fullRetract':currentState != 'game.play.loop'}">
-  <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.currentPlayer == false]-->
+  <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.isCurrentPlayer == false]-->
     <div class="topPlane"></div>
 
     <div class="bottomPlane">
       <div class="colorbar"><h3>{{name | capitalize}}</h3></div>
 
-      <div ng-show="game.phase == 'choice' && dealer.introText == false">
-        <div ng-show = "player.currentPlayer">
+      <div ng-show="game.phase == 'choice'">
+        <div ng-show = "player.isCurrentPlayer">
           <h3 class = "tab-title text-center">Choose an Action</h3>
           <div class="ggc-btn-wrap">
             <div class="col-md-6" ng-click="dealer.playerChoice(name,$index)" ng-repeat="choice in player.hand.choices track by $index">
