--- a/client/app/playerPanel/playerPanel.html
+++ b/client/app/playerPanel/playerPanel.html
@@ -2,7 +2,7 @@
 <div class="arrow environment"></div>
 <div class="arrow economy"></div>
 <div class="arrow energy"></div>
-
+<!--TODO(Ray) use player.panelClass instead of all this jazz-->
 <div class="panelOuter {{name}}" ng-class="{'retract':player.docked, 'fullRetract':currentState != 'game.play.loop'}">
   <div class="panelInner{{name}}" > <!--ng-class={true: 'extended', false: 'none'}[player.isCurrentPlayer == false]-->
     <div class="topPlane"></div>
@@ -23,7 +23,7 @@
 
         </div>
       </div>
-
+<!--TODO(Ray) I (think I) got rid of introText, we'll find a better way.-->
       <div ng-show="game.phase == 'choice' && dealer.introText == true">
         <div>
           <h3 class = "tab-title text-center">_______________</h3>
