added event scoring

--- a/client/app/game/event.html
+++ b/client/app/game/event.html
@@ -1,7 +1,7 @@
 
 <div id = "box-wrap-inner">
   <video  autoplay class = "ggc-video-main" ggc-video="true">
-    <source  ng-src="{{getVideoURL(game.main.videoFile)}}" type="video/webm"></source>
+    <source  ng-src="{{getVideoURL(game.newsEvent.videoFile)}}" type="video/webm"></source>
   </video>
 </div>
 
